--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "webpack": "^4.28.4",
+    "webpack": "^4.28.4"
+  },
+  "devDependencies": {
     "webpack-cli": "^3.2.1"
   }
 }
